2005-04-23  Daniel Bonniot  <bonniot@users.sourceforge.net>

	* kaffe/kaffevm/jit3/machine.c 
	[KAFFE_XDEBUGGING](installMethodCode):
	Handle class files without a SourceFile attribute
	more gracefully when xdebugging.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/Document.java:
        Added API documentation comments.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-23  Roman Kennke  <roman@kennke.org>

        * javax/swing/text/AbstractDocument.java
        (getDocumentProperties): Implemented.
        (setDocumentProperties): Implemented.
        (getProperty): Implemented.
        (putProperty): Implemented.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-22  Thomas Fitzsimmons  <fitzsim@redhat.com>

        * native/jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
        (connectSignals): Realize the window widget after connecting
        signals.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-22  Roman Kennke  <roman@kennke.org>

        * javax/swing/BoxLayout
        (preferredLayoutSize): Fixed computation so that it correctly
        adds the top and bottom insets of the container.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-22  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicMenuItemUI.java
        (paintText): Make use of the 'selectionForeground' UI default
        for text painting.

2005-04-23  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath:

	2005-04-22  Roman Kennke  <roman@kennke.org>

        * javax/swing/plaf/basic/BasicLookAndFeel.java
        (initSystemColorDefaults): Modified colors to match the
        BasicLookAndFeel in the reference implementation.
        (initComponentDefaults): Likewise.
