@@ -2311,6 +2311,7 @@ AC_CONFIG_FILES([kaffe/scripts/kaffexprof])
 AC_CONFIG_FILES([kaffe/scripts/jar])
 AC_CONFIG_FILES([kaffe/scripts/javah])
 AC_CONFIG_FILES([kaffe/scripts/javap])
+AC_CONFIG_FILES([kaffe/scripts/jdb])
 AC_CONFIG_FILES([kaffe/scripts/javadoc])
 AC_CONFIG_FILES([kaffe/scripts/appletviewer])
 AC_CONFIG_FILES([kaffe/scripts/rmic])
